# anchr

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.blossom  LICENSE  README.md  SECURITY.md  blossom-config.yml  components.json  deno.json  docker-compose.localstack.yml  docker-compose.yml  docker-entrypoint.sh  fly.blossom.toml  fly.relay.toml  fly.toml  fly.worker.toml  package.json  tsconfig.json
.claude/: settings.json
.frost-market/: signer-1.json  signer-2.json  signer-3.json
.github/: CODEOWNERS  dependabot.yml
crates/frost-signer/: Cargo.toml
crates/frost-signer/src/: main.rs
crates/tlsn-server/: Cargo.toml  Dockerfile  docker-entrypoint.sh  fly.toml
crates/tlsn-server/src/: main.rs
docs/: threat-model.lock.json  threat-model.md  trust-minimization-roadmap.md
e2e/: conditional-swap.test.ts  core-flow.test.ts  frost-p2pk-cashu.test.ts  frost-threshold.test.ts  oracle-discovery.test.ts  prediction-market-nostr.test.ts  prediction-market-resolution.test.ts  regtest-cashu.test.ts  regtest-htlc-attacks.test.ts  regtest-htlc-trustless.test.ts  relay.test.ts  tlsn-browser.test.ts  tlsn.test.ts  web.test.ts
example/: RUNBOOK.md
mobile/: README.md  app.json  package.json  tailwind.config.js
scripts/: arch-lint.ts  build-css.ts  build-ui.ts  check-no-local-paths.test.ts  check-no-local-paths.ts  create-bounty-query.ts  demo-htlc-server.ts  demo-htlc.ts  demo-payment-proof.html  demo-payment-proof.ts  demo.ts  deploy.sh  e2e-browser-qa.ts  e2e-flow-ui.html  e2e-square-full.ts  e2e-square-payment-link.ts  e2e-stripe-full.ts  e2e-stripe-payment-link.ts  frost-dkg-bootstrap.ts  frost-market-dkg-bootstrap.ts  frost-market-oracle-cluster.ts  frost-market-oracle-node.ts  frost-oracle-cluster.ts  gh-safe-body.sh  init-regtest.sh  launch-chrome-tlsn.ts  lint-invariants.test.ts  lint-invariants.ts  local-down.ts  local-up.ts  pentest-report.sh  refactor-lint.ts  run-e2e-square.sh  run-e2e-stripe.sh  run-square-proof.ts  run-stripe-proof.ts  test-all.sh
specs/: 00-overview.md  01-query-lifecycle.md  02-escrow.md  03-verification.md  04-threshold-oracle.md  05-messaging.md  06-storage.md  07-conditional-swap.md  08-oracle-registry.md  LICENSE  README.md
src/: ai-content-check.ts  attachments.ts  (+37 more)
(+513 files in other folders)
