[package]
name = "anchr-frost-signer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frost-signer"
path = "src/main.rs"

[dependencies]
frost-secp256k1-tr = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
rand = "0.8"

[profile.release]
strip = true
lto = true
