[package]
name = "anchr-tlsn-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlsn-server"
path = "src/main.rs"

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }

k256 = { version = "0.13", features = ["ecdsa"] }
bincode = "1.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"

[profile.release]
strip = true
lto = true
