[package]
name = "anchr-tlsn-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlsn-server"
path = "src/main.rs"

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }

k256 = { version = "0.13", features = ["ecdsa"] }
bincode = "1.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
async-tungstenite = { version = "0.34", features = ["tokio-runtime"] }
ws_stream_tungstenite = "0.14"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tungstenite = "0.24"
tokio-tungstenite = "0.24"
futures = "0.3"
tokio-socks = "0.5"

[profile.release]
strip = true
lto = true
